# Next-Step-Backend

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md  docker-compose.yml  main.py  pyproject.toml  seed.py  start.sh  test_api.py  test_config.py  test_model.py  test_models.py  test_services.py
alembic/: env.py
alembic/versions/: 1569c467b082_add_access_level_to_documents.py  1f293a2bef61_initial_schema.py  417cc85441cf_add_announcements_and_notification_.py  92270b4407e0_add_polls_and_poll_votes_tables.py  df80d4542dd3_add_is_active_to_users_role_to_.py  eecd114a9e7d_add_drive_tokens_to_user.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  activity.py  announcement.py  document.py  invitation.py  notification.py  poll.py  schedule.py  schedule_event.py  user.py
app/routers/: __init__.py  announcements.py  auth.py  dashboard.py  documents.py  invitations.py  notifications.py  polls.py  schedule_events.py  schedules.py  users.py
app/schemas/: __init__.py  announcement.py  auth.py  dashboard.py  document.py  invitation.py  notification.py  poll.py  schedule.py  schedule_event.py  user.py
app/services/: __init__.py  activity.py  auth.py  google_auth.py  google_drive.py  notifications.py
app/utils/: __init__.py  datetime_helpers.py
tests/: __init__.py
